--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
 body.modal-open {
   overflow: hidden;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
