--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,9 +10,9 @@
       <a [href]="cardmarketUrl" target="_blank" mat-stroked-button color="accent" class="same-width-button">
         Cardmarket
       </a>
-      <button mat-raised-button color="primary" (click)="onShowShopClick()" class="same-width-button">
-        Deckboxen Shop
-      </button>
+      <a mat-raised-button color="primary" routerLink="/galerie" class="same-width-button">
+        Deckboxen Galerie
+      </a>
     </div>
   </div>
 </div>
