--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,6 @@ body.modal-open {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
