added tailwind + daisyui

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,16 @@
 <div class="home-fullscreen-bg">
-  <div class="content-container mat-typography text-center text-white">
+  <div class="content-container text-center text-white">
     <div class="header-text-container">
-      <h1 class="mat-display-3 fw-bold">Kartenkrieger</h1>
-      <p class="mat-body-1 lead fw-normal">
+      <h1 class="text-6xl font-bold">Kartenkrieger</h1>
+      <p class="text-xl lead fw-normal">
         Deine Quelle für hochwertige Deckboxen und Zubehör.
       </p>
     </div>
     <div class="buttons-container d-grid gap-3 d-sm-flex justify-content-sm-center mt-4">
-      <a [href]="cardmarketUrl" target="_blank" mat-stroked-button color="accent" class="same-width-button">
+      <a [href]="cardmarketUrl" target="_blank" class="btn btn-outline btn-accent same-width-button">
         Cardmarket
       </a>
-      <a mat-raised-button color="primary" routerLink="/galerie" class="same-width-button">
+      <a routerLink="/galerie" class="btn btn-primary same-width-button">
         Deckboxen Galerie
       </a>
     </div>
