--- a/src/app/product-modal/product-modal.component.html
+++ b/src/app/product-modal/product-modal.component.html
@@ -1,33 +1,30 @@
-<mat-dialog-content class="modal-body">
-  <div class="modal-image-container">
-    <img [src]="mainModalImageUrl" [alt]="data.product.name">
-  </div>
-
-  <div class="modal-details-container">
-    <h2 mat-dialog-title>{{ data.product.name }}</h2>
-    <p *ngIf="data.product.detailedDescription">
-      {{ data.product.detailedDescription }}
-    </p>
-
-    <div class="additional-images"
-         *ngIf="data.product.additionalImages && data.product.additionalImages.length > 0">
-
-      <img [src]="data.product.imageUrl"
-           [alt]="data.product.name + ' Hauptbild'"
-           (mouseenter)="setMainModalImage(data.product.imageUrl)"
-           (click)="setMainModalImage(data.product.imageUrl)"
-           [class.active]="mainModalImageUrl === data.product.imageUrl">
-
-      <img *ngFor="let img of data.product.additionalImages"
-           [src]="img"
-           [alt]="data.product.name + ' Detailbild'"
-           (mouseenter)="setMainModalImage(img)"
-           (click)="setMainModalImage(img)"
-           [class.active]="mainModalImageUrl === img">
+<div class="modal modal-open">
+  <div class="modal-box w-11/12 max-w-5xl">
+    <div class="flex flex-col md:flex-row gap-8">
+      <div class="md:w-1/2">
+        <img [src]="mainModalImageUrl" [alt]="product.name" class="w-full h-auto rounded-lg">
+        <div class="flex gap-3 flex-wrap mt-4" *ngIf="product.additionalImages && product.additionalImages.length > 0">
+          <img [src]="product.imageUrl" [alt]="product.name + ' Hauptbild'"
+               (mouseenter)="setMainModalImage(product.imageUrl)"
+               (click)="setMainModalImage(product.imageUrl)"
+               [class.active]="mainModalImageUrl === product.imageUrl"
+               class="w-20 h-20 object-cover rounded-md border-2 border-transparent cursor-pointer hover:border-primary transition-all"
+               [ngClass]="{'border-primary scale-105': mainModalImageUrl === product.imageUrl}">
+          <img *ngFor="let img of product.additionalImages" [src]="img" [alt]="product.name + ' Detailbild'"
+               (mouseenter)="setMainModalImage(img)"
+               (click)="setMainModalImage(img)"
+               [class.active]="mainModalImageUrl === img"
+               class="w-20 h-20 object-cover rounded-md border-2 border-transparent cursor-pointer hover:border-primary transition-all"
+               [ngClass]="{'border-primary scale-105': mainModalImageUrl === img}">
+        </div>
+      </div>
+      <div class="md:w-1/2">
+        <h3 class="text-3xl font-bold">{{ product.name }}</h3>
+        <p class="py-4">{{ product.detailedDescription }}</p>
+      </div>
+    </div>
+    <div class="modal-action">
+      <button class="btn" (click)="onClose()">Schließen</button>
     </div>
   </div>
-</mat-dialog-content>
-
-<mat-dialog-actions align="end">
-  <button mat-button (click)="dialogRef.close()">Schließen</button>
-</mat-dialog-actions>
+</div>
