added tailwind + daisyui

--- a/src/app/datenschutz/datenschutz.component.html
+++ b/src/app/datenschutz/datenschutz.component.html
@@ -76,7 +76,7 @@
 
   <p>
     Telefon: +49 176 47229853<br />
-    E-Mail: <a href="mailto:sven.karcher@kabelbw.de">sven.karcher@kabelbw.de</a>
+    E-Mail: <a href="mailto:sven.karcher&#64;kabelbw.de">sven.karcher&#64;kabelbw.de</a>
   </p>
 
   <h3>SSL- bzw. TLS-Verschlüsselung</h3>
