added tailwind + daisyui

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,7 @@
   }
 }
 
+/*
 .layout-home {
   .app-footer {
     position: absolute;
@@ -17,6 +18,7 @@
     backdrop-filter: blur(2px);
   }
 }
+*/
 
 :host {
   display: flex;
