--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,17 @@
-<div class="home-fullscreen-bg">
-  <div class="content-container text-center text-white">
-    <div class="header-text-container">
-      <h1 class="text-6xl font-bold">Kartenkrieger</h1>
-      <p class="text-xl lead fw-normal">
-        Deine Quelle für hochwertige Deckboxen und Zubehör.
-      </p>
-    </div>
-    <div class="buttons-container d-grid gap-3 d-sm-flex justify-content-sm-center mt-4">
-      <a [href]="cardmarketUrl" target="_blank" class="btn btn-outline btn-accent same-width-button">
-        Cardmarket
-      </a>
-      <a routerLink="/galerie" class="btn btn-primary same-width-button">
-        Deckboxen Galerie
-      </a>
+<div class="hero min-h-screen" style="background-image: url(https://mktg-assets.tcgplayer.com/content/channel-fireball/article-images/2020/11/gp5.jpg);">
+  <div class="hero-overlay bg-opacity-60"></div>
+  <div class="hero-content text-center text-neutral-content">
+    <div class="max-w-md">
+      <h1 class="mb-5 text-5xl font-bold">Kartenkrieger</h1>
+      <p class="mb-5">Deine Quelle für hochwertige Deckboxen und Zubehör.</p>
+      <div class="flex justify-center gap-4">
+        <a [href]="cardmarketUrl" target="_blank" class="btn btn-outline btn-accent">
+          Cardmarket
+        </a>
+        <a routerLink="/galerie" class="btn btn-primary">
+          Deckboxen Galerie
+        </a>
+      </div>
     </div>
   </div>
 </div>
