--- a/src/app/showcase/showcase.component.html
+++ b/src/app/showcase/showcase.component.html
@@ -1,13 +1,12 @@
-<div class="fixed z-50 bottom-8 right-8 bg-neutral text-neutral-content rounded-box shadow-lg p-6">
-</div>
-
-<div class="container mx-auto p-4">
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-    <div *ngFor="let product of products" class="card bg-base-100 shadow-xl transition-transform duration-200 ease-in-out hover:-translate-y-1 hover:shadow-2xl cursor-pointer" (click)="showProductModal(product)">
-      <figure><img [src]="product.imageUrl" [alt]="product.name" /></figure>
+<div class="container mx-auto p-4 py-8">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+    <div *ngFor="let product of products" class="card bg-base-100 shadow-xl transition-all duration-200 ease-in-out hover:-translate-y-1 hover:shadow-2xl cursor-pointer" (click)="showProductModal(product)">
+      <figure class="px-4 pt-4">
+        <img [src]="product.imageUrl" [alt]="product.name" class="rounded-xl" />
+      </figure>
       <div class="card-body">
         <h2 class="card-title">{{ product.name }}</h2>
-        <p>{{ product.description }}</p>
+        <p class="text-base-content/70">{{ product.description }}</p>
       </div>
     </div>
   </div>
