--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,20 @@ body.modal-open {
   overflow: hidden;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+app-root {
+  display: block;
+  height: 100%;
+}
 
 // Line clamp utilities
 .line-clamp-2 {
