--- a/src/app/datenschutz/datenschutz.component.html
+++ b/src/app/datenschutz/datenschutz.component.html
@@ -1,9 +1,9 @@
-<div class="page-wrapper">
-  <div class="content-container">
+<div class="page-wrapper bg-base-200">
+  <div class="content-container bg-base-100 border border-base-300">
     <!-- Header -->
     <div class="page-header">
       <h1 class="page-title">Datenschutzerklärung</h1>
-      <div class="title-underline"></div>
+      <div class="title-underline bg-primary"></div>
     </div>
 
     <!-- Content -->
@@ -108,7 +108,7 @@
 
     <!-- Back Button -->
     <div class="action-buttons">
-      <button class="btn-back" (click)="goToHome()">
+      <button class="btn-back btn btn-primary" (click)="goToHome()">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
         </svg>
