--- a/src/app/product-modal/product-modal.component.scss
+++ b/src/app/product-modal/product-modal.component.scss
@@ -1,8 +1,7 @@
-// Fixed image container for modal
 .modal-image-container {
   position: relative;
   width: 100%;
-  padding-bottom: 100%; // 1:1 aspect ratio
+  padding-bottom: 100%;
   overflow: hidden;
   border-radius: 0.5rem;
   background: #f3f4f6;
